--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent_black">#360F0F0F</color>
     <color name="transparent">#00FFFFFF</color>
-    <color name="green">#00D49A</color>
+    <color name="green">#03D7A6</color>
 </resources>
